Bug 408138 - File URL incorrect when file path is not in filesystem encoding; r=cbiesinger sr=bzbarsky